--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@ under the License.
           <version>0.6</version>
         </plugin>
         <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>0.7.7.201606060606</version>
+        </plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-antrun-plugin</artifactId>
           <version>1.8</version>
@@ -267,50 +272,23 @@ under the License.
           </configuration>
         </plugin>
         <plugin>
-            <groupId>com.versioneye</groupId>
-            <artifactId>versioneye-maven-plugin</artifactId>
-            <version>3.9.2</version>
-        </plugin>
-        <plugin>
-          <groupId>org.complykit</groupId>
-          <artifactId>license-check-maven-plugin</artifactId>
-          <version>0.5.3</version>
-        </plugin>
-        <plugin>
           <groupId>com.github.github</groupId>
           <artifactId>site-maven-plugin</artifactId>
           <version>0.12</version>
-          <configuration>
-            <blacklist>
-              <param>agpl-3.0</param>
-              <param>gpl-1.0</param>
-              <param>gpl-2.0</param>
-              <param>gpl-3.0</param>
-              <param>lgpl-2.1</param>
-              <param>lgpl-3.0</param>
-              <param>qpl-1.0</param>
-              <param>sleepycat</param>
-              <param>ms-pl</param>
-            </blacklist>
-          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.sonarsource.scanner.maven</groupId>
+          <artifactId>sonar-maven-plugin</artifactId>
+          <version>3.0.2</version>
+        </plugin>
+        <plugin>
+          <groupId>com.versioneye</groupId>
+          <artifactId>versioneye-maven-plugin</artifactId>
+          <version>3.9.2</version>
         </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
-      <plugin>
-          <groupId>com.versioneye</groupId>
-          <artifactId>versioneye-maven-plugin</artifactId>
-          <version>3.9.2</version>
-          <executions>
-            <execution>
-              <phase>verify</phase>
-              <goals>
-                <goal>update</goal>
-                <goal>securityAndLicenseCheck</goal>
-              </goals>
-            </execution>
-          </executions>
-      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-remote-resources-plugin</artifactId>
@@ -426,19 +404,61 @@ under the License.
         </plugins>
       </build>
     </profile>
+
     <profile>
       <id>sonar</id>
       <properties>
         <sonar.host.url>https://sonarqube.com</sonar.host.url>
+        <sonar.login>${env.SONAR_LOGIN}</sonar.login>
       </properties>
       <build>
           <plugins>
               <plugin>
+                  <groupId>org.jacoco</groupId>
+                  <artifactId>jacoco-maven-plugin</artifactId>
+                  <executions>
+                    <execution>
+                      <phase>prepare-package</phase>
+                      <goals>
+                        <goal>prepare-agent</goal>
+                      </goals>
+                    </execution>
+                  </executions>
+              </plugin>
+              <plugin>
                   <groupId>org.sonarsource.scanner.maven</groupId>
                   <artifactId>sonar-maven-plugin</artifactId>
-                  <version>3.0.2</version>
+                  <executions>
+                    <execution>
+                      <phase>package</phase>
+                      <goals>
+                        <goal>sonar</goal>
+                      </goals>
+                    </execution>
+                  </executions>
               </plugin>
           </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>versioneye</id>
+      <build>
+        <plugins>
+          <plugin>
+              <groupId>com.versioneye</groupId>
+              <artifactId>versioneye-maven-plugin</artifactId>
+              <executions>
+                <execution>
+                  <phase>verify</phase>
+                  <goals>
+                    <goal>update</goal>
+                    <goal>securityAndLicenseCheck</goal>
+                  </goals>
+                </execution>
+              </executions>
+          </plugin>
+        </plugins>
       </build>
     </profile>
   </profiles>
