--- a/pom.xml
+++ b/pom.xml
@@ -252,7 +252,7 @@ under the License.
             <autoVersionSubmodules>true</autoVersionSubmodules>
             <useReleaseProfile>false</useReleaseProfile>
             <releaseProfiles>release</releaseProfiles>
-            <goals>deploy nexus-staging:release</goals>
+            <goals>deploy</goals>
           </configuration>
         </plugin>
         <plugin>
@@ -306,17 +306,6 @@ under the License.
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-war-plugin</artifactId>
           <version>2.6</version>
-        </plugin>
-        <plugin>
-          <groupId>org.sonatype.plugins</groupId>
-          <artifactId>nexus-staging-maven-plugin</artifactId>
-          <version>1.6.7</version>
-          <extensions>true</extensions>
-          <configuration>
-            <serverId>ossrh</serverId>
-            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-            <autoReleaseAfterClose>true</autoReleaseAfterClose>
-          </configuration>
         </plugin>
         <plugin>
           <groupId>com.github.github</groupId>
