--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@ under the License.
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.symphonyoss</groupId>
   <artifactId>symphonyoss</artifactId>
-  <version>2</version>
+  <version>3-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>The Symphony Software Foundation</name>
@@ -79,7 +79,7 @@ under the License.
     <connection>scm:git:git://github.com/symphonyoss/ssf-parent-pom.git</connection>
     <developerConnection>scm:git:git@github.com:symphonyoss/ssf-parent-pom.git</developerConnection>
     <url>https://github.com/symphonyoss/ssf-parent-pom</url>
-    <tag>symphonyoss-2</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <!-- Temporary until the ssf-enforcer-rules dependency is released on Maven Central -->
