--- a/pom.xml
+++ b/pom.xml
@@ -246,21 +246,6 @@ under the License.
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.10.4</version>
-          <configuration>
-            <failOnError>false</failOnError>
-          </configuration>
-          <executions>
-  					<execution>
-  						<goals>
-  							<goal>jar</goal>
-  						</goals>
-  					</execution>
-  				</executions>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-plugin-plugin</artifactId>
           <version>3.4</version>
         </plugin>
@@ -402,7 +387,7 @@ under the License.
           </execution>
         </executions>
       </plugin>
-      <plugin>
+      <!-- <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <executions>
@@ -413,9 +398,22 @@ under the License.
             </goals>
           </execution>
         </executions>
-      </plugin>
+      </plugin> -->
     </plugins>
   </build>
+
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.10.4</version>
+        <configuration>
+          <failOnError>false</failOnError>
+        </configuration>
+      </plugin>
+    </plugins>
+  </reporting>
 
   <profiles>
     <profile>
@@ -440,9 +438,21 @@ under the License.
     </profile>
 
     <profile>
-      <id>github-release</id>
+      <id>publish-site</id>
       <build>
         <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+    				<artifactId>maven-site-plugin</artifactId>
+    				<executions>
+    					<execution>
+    						<goals>
+    							<goal>site</goal>
+    						</goals>
+    						<phase>package</phase>
+    					</execution>
+    				</executions>
+    			</plugin>
     			<plugin>
     				<groupId>com.github.github</groupId>
     				<artifactId>site-maven-plugin</artifactId>
@@ -454,7 +464,7 @@ under the License.
     						<goals>
     							<goal>site</goal>
     						</goals>
-    						<phase>site</phase>
+    						<phase>deploy</phase>
     					</execution>
     				</executions>
     			</plugin>
