--- a/pom.xml
+++ b/pom.xml
@@ -506,11 +506,17 @@ under the License.
 
     <profile>
       <id>versioneye</id>
+      <properties>
+        <versioneye.trackPlugins>false</versioneye.trackPlugins>
+      </properties>
       <build>
         <plugins>
           <plugin>
               <groupId>com.versioneye</groupId>
               <artifactId>versioneye-maven-plugin</artifactId>
+              <configuration>
+                <trackPlugins>${versioneye.trackPlugins}</trackPlugins>
+              </configuration>
               <executions>
                 <execution>
                   <phase>verify</phase>
@@ -524,32 +530,5 @@ under the License.
         </plugins>
       </build>
     </profile>
-
-    <profile>
-      <id>whitesource</id>
-      <properties>
-        <whitesource.org.token>${env.WHITESOURCE_TOKEN}</whitesource.org.token>
-      </properties>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.whitesource</groupId>
-            <artifactId>whitesource-maven-plugin</artifactId>
-            <configuration>
-              <orgToken>${whitesource.org.token}</orgToken>
-            </configuration>
-            <executions>
-              <execution>
-                <phase>package</phase>
-                <goals>
-                  <goal>update</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
   </profiles>
 </project>
