--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,7 @@ under the License.
     <maven.compiler.target>1.8</maven.compiler.target>
     <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
     <github.global.server>github</github.global.server>
+    <github.oauth.token>${env.GITHUB_TOKEN}</github.oauth.token>
   </properties>
 
   <build>
@@ -452,6 +453,7 @@ under the License.
     				<groupId>com.github.github</groupId>
     				<artifactId>site-maven-plugin</artifactId>
     				<configuration>
+              <oauth2Token>${github.oauth.token}</oauth2Token>
     					<message>Building site for ${project.version}</message>
     				</configuration>
     				<executions>
