:new: add configurable whitesource product var

--- a/pom.xml
+++ b/pom.xml
@@ -581,30 +581,32 @@ under the License.
       </build>
     </profile>
 
-   <profile>    
-      <id>whitesource</id>    
-      <properties>    
-        <whitesource.org.token>${env.WHITESOURCE_TOKEN}</whitesource.org.token>   
-      </properties>   
-      <build>   
-        <plugins>   
-          <plugin>    
-            <groupId>org.whitesource</groupId>    
-            <artifactId>whitesource-maven-plugin</artifactId>   
-            <configuration>   
-              <orgToken>${whitesource.org.token}</orgToken>   
-            </configuration>    
-            <executions>    
-              <execution>   
-                <phase>package</phase>    
-                <goals>   
-                  <goal>update</goal>   
-                </goals>    
-              </execution>    
-            </executions>   
-          </plugin>   
-        </plugins>    
-      </build>    
+   <profile>
+      <id>whitesource</id>
+      <properties>
+        <whitesource.org.token>${env.WHITESOURCE_TOKEN}</whitesource.org.token>
+        <whitesource.product>${project.artifactId}</whitesource.product>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.whitesource</groupId>
+            <artifactId>whitesource-maven-plugin</artifactId>
+            <configuration>
+              <orgToken>${whitesource.org.token}</orgToken>
+              <product>${whitesource.product}</product>
+            </configuration>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <goals>
+                  <goal>update</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
 </project>
