--- a/pom.xml
+++ b/pom.xml
@@ -487,7 +487,7 @@ under the License.
             <artifactId>maven-javadoc-plugin</artifactId>
             <executions>
               <execution>
-                <id>sign-release-artifacts</id>
+                <id>attach-javadocs</id>
                 <phase>package</phase>
                 <goals>
                   <goal>jar</goal>
