--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!--
-Licensed to the Symphony Software Foundation (SSF) under one
-or more contributor license agreements.  See the NOTICE file
+Licensed to FINOS under one
+or more contributor license agreements. See the NOTICE file
 distributed with this work for additional information
-regarding copyright ownership.  The SSF licenses this file
+regarding copyright ownership.  FINOS licenses this file
 to you under the Apache License, Version 2.0 (the
 "License"); you may not use this file except in compliance
 with the License.  You may obtain a copy of the License at
@@ -21,27 +21,27 @@ under the License.
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.symphonyoss</groupId>
-  <artifactId>symphonyoss</artifactId>
-  <version>12-SNAPSHOT</version>
+  <groupId>org.finos</groupId>
+  <artifactId>finos</artifactId>
+  <version>1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
-  <name>The Symphony Software Foundation Parent POM</name>
-  <description>Delivers code automation for projects hosted by the Symphony Software Foundation that build with Apache Maven</description>
-  <url>https://symphony.foundation</url>
+  <name>The FINOS Parent POM</name>
+  <description>Delivers code automation for projects hosted by the FINOS that build with Apache Maven</description>
+  <url>https://finos.org</url>
   <organization>
-    <name>Symphony Software Foundation</name>
-    <url>https://symphony.foundation</url>
+    <name>FINOS</name>
+    <url>https://finos.org</url>
   </organization>
 
   <developers>
     <developer>
         <id>maoo</id>
         <name>Maurizio Pillitu</name>
-        <email>maoo@symphony.foundation</email>
+        <email>maoo@finos.org</email>
         <url>http://github.com/maoo</url>
-        <organization>Symphony Software Foundation</organization>
-        <organizationUrl>http://symphony.foundation</organizationUrl>
+        <organization>FINOS</organization>
+        <organizationUrl>https://finos.org</organizationUrl>
         <timezone>+1</timezone>
         <roles>
             <role>Architect</role>
@@ -59,26 +59,21 @@ under the License.
 
   <mailingLists>
     <mailingList>
-      <name>Symphony Dev List</name>
-      <subscribe>dev+subscribe@symphony.foundation</subscribe>
-      <unsubscribe>dev+unsubscribe@symphony.foundation</unsubscribe>
-      <post>dev@symphony.foundation</post>
-      <archive>https://groups.google.com/a/symphony.foundation/forum/#!forum/dev</archive>
+      <name>FDX General List</name>
+      <subscribe>finos-fdx@finos.org</subscribe>
+      <unsubscribe>finos-fdx+unsubscribe@finos.org</unsubscribe>
+      <post>finos-fdx@finos.org</post>
+      <archive>https://groups.google.com/a/finos.org/forum/#!forum/finos-fdx</archive>
     </mailingList>
   </mailingLists>
 
-  <prerequisites>
-    <maven>3.0</maven>
-  </prerequisites>
-
   <scm>
-    <connection>scm:git:git://github.com/symphonyoss/ssf-parent-pom.git</connection>
-    <developerConnection>scm:git:git@github.com:symphonyoss/ssf-parent-pom.git</developerConnection>
-    <url>https://github.com/symphonyoss/ssf-parent-pom</url>
+    <connection>scm:git:git://github.com/finos-fdx/finos-parent-pom.git</connection>
+    <developerConnection>scm:git:git@github.com:finos-fdx/finos-parent-pom.git</developerConnection>
+    <url>https://github.com/finos-fdx/finos-parent-pom</url>
     <tag>HEAD</tag>
   </scm>
 
-  <!-- Temporary until the ssf-enforcer-rules dependency is released on Maven Central -->
   <pluginRepositories>
     <pluginRepository>
       <id>ossrh</id>
@@ -90,7 +85,6 @@ under the License.
     </pluginRepository>
   </pluginRepositories>
 
-  <!-- Temporary until the ssf-jar-resource-bundle dependency is released on Maven Central -->
   <repositories>
     <repository>
       <id>ossrh</id>
@@ -116,17 +110,17 @@ under the License.
   </distributionManagement>
 
   <issueManagement>
-		<url>https://github.com/symphonyoss/ssf-parent-pom/issues</url>
+		<url>https://github.com/finos-fdx/finos-parent-pom/issues</url>
 		<system>GitHub Issues</system>
 	</issueManagement>
 
   <properties>
-    <distMgmtReleaseName>Symphony Foundation Release Distribution Repository</distMgmtReleaseName>
+    <distMgmtReleaseName>FINOS Release Distribution Repository</distMgmtReleaseName>
     <distMgmtReleaseUrl>https://oss.sonatype.org/service/local/staging/deploy/maven2/</distMgmtReleaseUrl>
-    <distMgmtSnapshotsName>Symphony Foundation Development Snapshot Repository</distMgmtSnapshotsName>
+    <distMgmtSnapshotsName>FINOS Development Snapshot Repository</distMgmtSnapshotsName>
     <distMgmtSnapshotsUrl>https://oss.sonatype.org/content/repositories/snapshots/</distMgmtSnapshotsUrl>
     <release.goals>deploy</release.goals>
-    <organization.logo>http://symphony.foundation/images/SymphonySoftwareFoundation.png</organization.logo>
+    <organization.logo>https://www.finos.org/hs-fs/hubfs/sofin%20assets/SOFIN%20LOGOS/FINOS_Icon_Wordmark_White.png</organization.logo>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <gpg.useagent>true</gpg.useagent>
@@ -165,37 +159,37 @@ under the License.
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
-	<plugin>
-	    <groupId>org.codehaus.mojo</groupId>
-	    <artifactId>cobertura-maven-plugin</artifactId>
-	    <version>2.7</version>
-	    <configuration>
-		<formats>
-		    <format>html</format>
-		</formats>
-		<check>
-		    <totalLineRate>90</totalLineRate>
-		</check>
-	    </configuration>
-	    <executions>
-		<execution>
-		    <phase>package</phase>
-		    <goals>
-			<goal>cobertura</goal>
-			<goal>check</goal>
-		    </goals>
-	        </execution>
-	    </executions>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>cobertura-maven-plugin</artifactId>
+          <version>2.7</version>
+          <configuration>
+          	<formats>
+          	    <format>html</format>
+          	</formats>
+          	<check>
+          	    <totalLineRate>90</totalLineRate>
+          	</check>
+          </configuration>
+          <executions>
+          	<execution>
+        	    <phase>package</phase>
+        	    <goals>
+            		<goal>cobertura</goal>
+            		<goal>check</goal>
+        	    </goals>
+            </execution>
+          </executions>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.5.1</version>
+          <version>3.8.0</version>
           <configuration>
             <showWarnings>${maven.compiler.showWarnings}</showWarnings>
-	    <source>${maven.compiler.source}</source>
-	    <target>${maven.compiler.target}</target>
- 	  </configuration>
+            <source>${maven.compiler.source}</source>
+            <target>${maven.compiler.target}</target>
+      	  </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -205,10 +199,15 @@ under the License.
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
+          <version>3.0.0-M1</version>
           <configuration>
             <updateReleaseInfo>true</updateReleaseInfo>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>3.7.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -224,18 +223,20 @@ under the License.
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-enforcer-plugin</artifactId>
           <version>1.4.1</version>
+<!-- TODO - enable when finos-enforcer-rules is released -->
+<!--
           <dependencies>
             <dependency>
-              <groupId>org.symphonyoss</groupId>
-              <artifactId>ssf-enforcer-rules</artifactId>
+              <groupId>org.finos</groupId>
+              <artifactId>finos-enforcer-rules</artifactId>
               <version>0.9.0</version>
             </dependency>
           </dependencies>
-        </plugin>
+ -->        </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-failsafe-plugin</artifactId>
-          <version>2.19.1</version>
+          <version>2.22.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -250,7 +251,7 @@ under the License.
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
+          <version>3.0.0-M1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -305,11 +306,14 @@ under the License.
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-remote-resources-plugin</artifactId>
           <version>1.5</version>
+<!-- TODO - enable when finos-jar-resource-bundle is released -->
+<!--
           <configuration>
             <resourceBundles>
-              <resourceBundle>org.symphonyoss:ssf-jar-resource-bundle:1</resourceBundle>
+              <resourceBundle>org.finos:finos-jar-resource-bundle:1</resourceBundle>
             </resourceBundles>
           </configuration>
+ -->
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -319,7 +323,7 @@ under the License.
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-scm-plugin</artifactId>
-          <version>1.9.4</version>
+          <version>1.11.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -341,12 +345,12 @@ under the License.
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.19.1</version>
+          <version>2.22.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-report-plugin</artifactId>
-          <version>2.19.1</version>
+          <version>2.22.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -361,12 +365,7 @@ under the License.
         <plugin>
           <groupId>org.sonarsource.scanner.maven</groupId>
           <artifactId>sonar-maven-plugin</artifactId>
-          <version>3.3.0.603</version>
-        </plugin>
-        <plugin>
-          <groupId>com.versioneye</groupId>
-          <artifactId>versioneye-maven-plugin</artifactId>
-          <version>3.11.4</version>
+          <version>3.5.0.1254</version>
         </plugin>
         <plugin>
           <groupId>org.whitesource</groupId>
@@ -376,6 +375,8 @@ under the License.
       </plugins>
     </pluginManagement>
     <plugins>
+<!-- TODO - enable when finos-jar-resource-bundle is released -->
+<!--
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-remote-resources-plugin</artifactId>
@@ -388,23 +389,26 @@ under the License.
           </execution>
         </executions>
       </plugin>
+-->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
         <configuration>
           <rules>
-            <myCustomRule implementation="org.symphonyoss.maven.enforcer.RequireGroupIdRule">
-              <groupIdPrefix>org.symphonyoss</groupIdPrefix>
+            <requireMavenVersion>
+              <version>3.0.5</version>
+            </requireMavenVersion>
+<!-- TODO - enable when finos-enforcer-rules is released -->
+<!--
+            <myCustomRule implementation="org.finos.maven.enforcer.RequireGroupIdRule">
+              <groupIdPrefix>org.finos</groupIdPrefix>
             </myCustomRule>
-            <myCustomRule implementation="org.symphonyoss.maven.enforcer.RequireFileInArtifactRule">
+            <myCustomRule implementation="org.finos.maven.enforcer.RequireFileInArtifactRule">
               <fileName>NOTICE</fileName>
-              <match>The Symphony Software Foundation (http://symphony.foundation)</match>
+              <match>FINOS (https://finos.org)</match>
             </myCustomRule>
-            <myCustomRule implementation="org.symphonyoss.maven.enforcer.RequireFileInArtifactRule">
-              <fileName>LICENSE</fileName>
-              <match>Copyright 2016 The Symphony Software Foundation</match>
-            </myCustomRule>
-            <myCustomRule implementation="org.symphonyoss.maven.enforcer.RequirePomMetadataRule" />
+            <myCustomRule implementation="org.finos.maven.enforcer.RequirePomMetadataRule" />
+-->
           </rules>
         </configuration>
         <executions>
@@ -553,7 +557,7 @@ under the License.
       <properties>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.login>${env.SONAR_TOKEN}</sonar.login>
-        <sonar.organization>symphonyoss</sonar.organization>
+        <sonar.organization>finos</sonar.organization>
       </properties>
       <build>
           <plugins>
@@ -586,38 +590,6 @@ under the License.
     </profile>
 
     <profile>
-      <id>versioneye</id>
-      <properties>
-        <versioneye.trackPlugins>false</versioneye.trackPlugins>
-        <versioneye.skipScopes>test,provided</versioneye.skipScopes>
-        <versioneye.propertiesPath>${basedir}/src/main/resources/versioneye.properties</versioneye.propertiesPath>
-      </properties>
-      <build>
-        <plugins>
-          <plugin>
-              <groupId>com.versioneye</groupId>
-              <artifactId>versioneye-maven-plugin</artifactId>
-              <configuration>
-                <transitiveDependencies>true</transitiveDependencies>
-                <trackPlugins>${versioneye.trackPlugins}</trackPlugins>
-                <skipScopes>${versioneye.skipScopes}</skipScopes>
-                <propertiesPath>${versioneye.propertiesPath}</propertiesPath>
-              </configuration>
-              <executions>
-                <execution>
-                  <phase>verify</phase>
-                  <goals>
-                    <goal>update</goal>
-                    <goal>securityAndLicenseCheck</goal>
-                  </goals>
-                </execution>
-              </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-   <profile>
       <id>whitesource</id>
       <properties>
         <whitesource.org.token>${env.WHITESOURCE_TOKEN}</whitesource.org.token>
