--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,11 @@
 
 language: java
 
+cache:
+  directories:
+  - .autoconf
+  - $HOME/.m2
+
 script:
   - "if [[ $TRAVIS_BRANCH =~ master && \"$TRAVIS_PULL_REQUEST\" = \"false\" ]]; then mvn clean deploy -Psonar --settings settings.xml ; else mvn clean install ; fi"
 
